<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_t2_sensor_kit_description</name>
  <version>0.1.0</version>
  <description>The carla_t2_sensor_kit_description package</description>
  <maintainer email="gemb.kaljavesi@tum.de">Gemb Kaljavesi</maintainer>
  <maintainer email="tobias.kerbl@tum.de">Tobias Kerbl</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>velodyne_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
